--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,50 @@
 annotated-types==0.7.0
 anyio==4.4.0
+bcrypt==4.2.0
+certifi==2024.7.4
+cffi==1.17.0
+click==8.1.7
+colorama==0.4.6
 contourpy==1.2.1
+cryptography==43.0.0
 cycler==0.12.1
+dnspython==2.6.1
+ecdsa==0.19.0
 fastapi==0.112.0
 fonttools==4.53.1
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.2
 idna==3.7
+iniconfig==2.0.0
 kiwisolver==1.4.5
 matplotlib==3.9.1
 numpy==2.0.1
 packaging==24.1
 pandas==2.2.2
+passlib==1.7.4
 pillow==10.4.0
+pluggy==1.5.0
+pyasn1==0.6.0
+pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
+pymongo==4.8.0
 pyparsing==3.1.2
+pytest==8.3.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.9
 pytz==2024.1
+PyYAML==6.0.2
+rsa==4.9
 six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
 typing_extensions==4.12.2
 tzdata==2024.1
+uvicorn==0.30.5
+watchfiles==0.23.0
+websockets==12.0
